fix single-column alignment on homepage

--- a/static/css/bootstrap-subset.css
+++ b/static/css/bootstrap-subset.css
@@ -293,6 +293,7 @@ h3 {
 }
 
 p,
+.player,
 pre {
   margin-top: 0;
   margin-bottom: 1rem;
